<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="dashboard"
        android:enabled="true"
        android:icon="@drawable/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_dashboard_short"
        android:shortcutLongLabel="@string/shortcut_dashboard_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://finance.luisbenedikt.de/?source=android-shortcut&amp;view=dashboard" />
    </shortcut>
    <shortcut
        android:shortcutId="transactions"
        android:enabled="true"
        android:icon="@drawable/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_transactions_short"
        android:shortcutLongLabel="@string/shortcut_transactions_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://finance.luisbenedikt.de/?source=android-shortcut&amp;view=transactions" />
    </shortcut>
    <shortcut
        android:shortcutId="new_transaction"
        android:enabled="true"
        android:icon="@drawable/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_add_short"
        android:shortcutLongLabel="@string/shortcut_add_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://finance.luisbenedikt.de/?source=android-shortcut&amp;action=new-transaction" />
    </shortcut>
</shortcuts>
